# python-boilerplate

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_process.sh
.github/workflows/: build_and_test.yml
github/workflows/: build_and_test.yml
src/: app.py
tests/: test_app.py
